# jeopardy-game

./: .gitignore  CMakeLists.txt  GamePage.qml  Main.qml  QstnPage.qml  StartPage.qml  index.js  main.cpp  questions.json
